# NotipusProject

./: .env.dev  README.md  manage.py  pyproject.toml
NotipusProject/: asgi.py  settings.py  urls.py  wsgi.py
slack_auth/: api.py  apps.py  integration_api.py  models.py  stripe_service.py
slack_auth/migrations/: 0001_initial.py  0002_organization_monthly_limit_and_more.py
webhook/: api.py
